--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Análisis de Patrones de Chladni desde MIDI</title>
     <!-- Incluir la biblioteca P5.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-    <!-- Incluir la biblioteca MIDI.js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/midijs/0.4.5/midi.min.js"></script>
+    <!-- Incluir la biblioteca Tone.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.26/Tone.js"></script>
 </head>
 <body>
     <h1>Análisis de Patrones de Chladni desde MIDI</h1>
@@ -23,7 +23,7 @@
                 function() {
                     // Obtener las notas y frecuencias del archivo MIDI
                     let notes = MIDI.Player.getSongNotes();
-                    let frequencies = notes.map(note => MIDI.keyToFrequency(note));
+                    let frequencies = notes.map(note => Tone.Frequency(note).toFrequency());
 
                     // Llamar a la función para generar los patrones de Chladni
                     generateChladniPatterns(frequencies);
@@ -31,44 +31,44 @@
             );
         }
 
-       // Función para generar los patrones de Chladni
-function generateChladniPatterns(frequencies) {
-    // Definir el lienzo P5.js
-    let canvas;
-  
-    // Función de configuración inicial de P5.js
-    function setup() {
-        // Crear un lienzo P5.js
-        canvas = createCanvas(800, 600);
-        background(255);
-        
-        // Generar y visualizar los patrones de Chladni
-        generateChladni(frequencies);
-    }
-  
-    // Función para generar y visualizar los patrones de Chladni
-    function generateChladni(frequencies) {
-        // Lógica para generar y visualizar los patrones de Chladni
-        // Utiliza P5.js para dibujar los patrones en el lienzo
-        let numNotes = frequencies.length;
-        let margin = 20;
-        let startX = margin;
-        let endX = width - margin;
-        let startY = margin;
-        let endY = height - margin;
-        let stepX = (endX - startX) / (numNotes - 1);
-        
-        // Dibujar líneas o círculos según las frecuencias
-        for (let i = 0; i < numNotes; i++) {
-            let x = startX + i * stepX;
-            let y = map(frequencies[i], minFrequency, maxFrequency, endY, startY);
-            ellipse(x, y, 10, 10); // Ejemplo de dibujo, ajusta según tus necesidades
-        }
-    }
-}
+        // Función para generar los patrones de Chladni
+        function generateChladniPatterns(frequencies) {
+            // Definir el lienzo P5.js
+            let canvas;
 
-// Llamar a la función para cargar y analizar el archivo MIDI
-loadAndAnalyzeMIDI();
+            // Función de configuración inicial de P5.js
+            function setup() {
+                // Crear un lienzo P5.js
+                canvas = createCanvas(800, 600);
+                background(255);
+
+                // Generar y visualizar los patrones de Chladni
+                generateChladni(frequencies);
+            }
+
+            // Función para generar y visualizar los patrones de Chladni
+            function generateChladni(frequencies) {
+                // Lógica para generar y visualizar los patrones de Chladni
+                // Utiliza P5.js para dibujar los patrones en el lienzo
+                let numNotes = frequencies.length;
+                let margin = 20;
+                let startX = margin;
+                let endX = width - margin;
+                let startY = margin;
+                let endY = height - margin;
+                let stepX = (endX - startX) / (numNotes - 1);
+
+                // Dibujar círculos según las frecuencias
+                for (let i = 0; i < numNotes; i++) {
+                    let x = startX + i * stepX;
+                    let y = map(frequencies[i], 0, 2000, endY, startY); // Ajusta los valores máximos y mínimos según tus necesidades
+                    ellipse(x, y, 10, 10); // Dibuja un círculo en la posición calculada
+                }
+            }
+        }
+
+        // Llamar a la función para cargar y analizar el archivo MIDI
+        loadAndAnalyzeMIDI();
 
     </script>
 </body>
