--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         // Variables globales para el lienzo y las frecuencias
         let canvas;
         let frequencies;
-        let mp3Player;
 
         // Arreglo de colores para los patrones Chladni
         let colors = ['#FF0000', '#00FF00', '#0000FF', '#FFFF00', '#FF00FF', '#00FFFF'];
@@ -38,15 +37,16 @@
 
         // Función para cargar y analizar el archivo MIDI
         function loadAndAnalyzeMIDI() {
-            // Obtener las notas y frecuencias del archivo MIDI
-            let midiNote = "C4"; // Nota MIDI de referencia
-            let referenceFrequency = Tone.Midi(midiNote).toFrequency(); // Frecuencia de la nota de referencia
-            let targetReferenceFrequency = 432; // Frecuencia de referencia deseada (432 Hz)
-            let pitchRatio = targetReferenceFrequency / referenceFrequency; // Relación de cambio de tono
+            // Crear un reproductor MIDI
+            let player = new Tone.Player("ruta_de_tu_archivo_midi.mid").toDestination();
 
-            // Calcular y ajustar las frecuencias de las notas al nuevo tono
-            let notes = Tone.Midi(midiNote).toFrequency() * pitchRatio;
-            frequencies = [notes];
+            // Ajustar la frecuencia de reproducción a 432 Hz
+            player.playbackRate = 432 / 440;
+
+            // Obtener las notas y frecuencias del archivo MIDI
+            player.get("midi").then(function(midi) {
+                frequencies = midi.notes.map(note => Tone.Frequency(note.name).toFrequency());
+            });
 
             // Crear un lienzo P5.js
             canvas = createCanvas(800, 600);
@@ -55,11 +55,6 @@
 
             // Generar y visualizar los patrones de Chladni en cada fotograma
             drawChladniPatterns();
-
-            // Crear el reproductor de MP3 y cargar la canción
-            mp3Player = new Tone.Player("tu_cancion.mp3").toDestination(); // Reemplaza "tu_cancion.mp3" con la URL de tu archivo MP3
-            mp3Player.playbackRate = pitchRatio; // Ajustar el pitch del reproductor MP3
-            mp3Player.autostart = true;
         }
 
         // Función para generar y visualizar los patrones de Chladni en cada fotograma
