--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         // Variables globales para el lienzo y las frecuencias
         let canvas;
         let frequencies;
+        let player; // Variable para almacenar el reproductor de audio Tone.js
 
         // Arreglo de colores para los patrones Chladni
         let colors = ['#FF0000', '#00FF00', '#0000FF', '#FFFF00', '#FF00FF', '#00FFFF'];
@@ -29,10 +30,12 @@
         // Función para iniciar el análisis después de la interacción del usuario
         function startAnalysis() {
             // Iniciar el contexto de audio después de la interacción del usuario
-            Tone.start();
-
-            // Cargar y analizar el archivo MIDI después de un corto retraso para asegurarse de que el contexto de audio se inicie
-            setTimeout(loadAndAnalyzeMIDI, 100);
+            Tone.start().then(() => {
+                // Cargar y analizar el archivo MIDI después de que el contexto de audio se inicie
+                loadAndAnalyzeMIDI();
+            }).catch(err => {
+                console.error(err);
+            });
         }
 
         // Función para cargar y analizar el archivo MIDI
@@ -95,18 +98,17 @@
         // Función para configurar el audio
         function audioSetup(url) {
             // Configurar el reproductor de audio con la canción
-            let player = new Tone.Player(url).toDestination();
+            player = new Tone.Player(url).toDestination();
             player.playbackRate = 443 / 440; // Ajustar el pitch de la canción
             player.autostart = true;
         }
 
-        // Función para inicializar el audio cuando se hace clic en el documento
-        document.body.addEventListener('click', initAudio);
+        // Inicializar el audio cuando se hace clic en el documento
+        document.addEventListener('DOMContentLoaded', initAudio);
 
         async function initAudio() {
             await loadAndProcessMidi('https://sghome.github.io/mp3/go.mid');
             audioSetup('https://sghome.github.io/mp3/go.mp3');
-            document.body.removeEventListener('click', initAudio);
         }
     </script>
 </body>
