--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         // Función para inicializar el audio automáticamente al cargar la página
         async function initAudio() {
             await loadAndProcessMidi('https://sghome.github.io/mp3/go.mid');
-            audioSetup('https://sghome.github.io/mp3/go.mp3');
+            audioSetup('https://cdn.glitch.global/764bc5af-2031-4a40-82a5-7a4337618c33/media-674193e0.mp3');
         }
 
         // Llamar a la función de inicialización del audio al cargar la página
